# Blender-Procedural-Human

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  DEVELOPMENT_WORKFLOW.md  Dockerfile.blender  PlanOfTheWork.md  Proportions.md  README.md  TODO.md  auto_install_reload.py  charrot_gregory_equations.md  dev.py  export_charrot_fixtures.py  install.py  install_and_reload.py  mcp_server_standalone.py  multisided_coon.md  package.py  pyproject.toml  quick_reload.py  reload_addon.py  test_import.py  update_wheels.ps1
procedural_human/: README.md  __init__.py  advanced_nodes.py  blender_const.py  blender_manifest.toml  config.py  example_finger.md  logger.py  menus.py  operator_decorator.py  operator_utils.py  operators.py  panel_decorator.py  panels.py  preferences.py  pyproject.toml  utils.py
procedural_human/decorators/: __init__.py  curve_preset_decorator.py  discoverable_decorator.py  dsl_definition_decorator.py  dsl_primitive_decorator.py  geo_node_decorator.py  gizmo_decorator.py  module_discovery.py  node_helper_decorator.py  operator_decorator.py  panel_decorator.py  shader_node_decorator.py  workspace_decorator.py
procedural_human/definitons/: finger.py  finger_float_curve_presets.py
procedural_human/definitons/finger/: finger.py  finger_float_curve_presets.py
procedural_human/definitons/torso/: torso.py  torso_float_curve_presets.py
procedural_human/depth_estimation/: __init__.py  depth_estimator.py
procedural_human/dsl/: __init__.py  debug.py  dsl_utils.py  executor.py  finger.py  finger_float_curve_presets.py  generator.py  naming.py  operators.py  panel.py  primitives.py  watcher.py
procedural_human/dsl/primitives/: __init__.py  bone.py  dual_radial.py  ik.py  join.py  primitives.py  quad_radial.py  radial_attachment.py
procedural_human/dsl/primitives/bone/: bone.py
procedural_human/dsl/primitives/dual_radial/: dual_radial.py  dual_radial_nodes.py
procedural_human/dsl/primitives/dual_radial_loft/: dual_radial_loft.py  dual_radial_loft_nodes.py
procedural_human/dsl/primitives/ik/: ik.py
procedural_human/geo_node_groups/: __init__.py  cache_bezier.py  charrot_gregory_patch.py  closures.py  coon_patch.py  dual_radial.py  loft_spheroid.py  node_helpers.py  quad_radial.py  radial.py  recreate_mesh_curve.py  segmentation_depth_loft.py  single_radial.py  store_attr_on_points.py  worn_edges.py
procedural_human/geo_node_groups/armor/: armor_suit.py  blocker.py  chest.py  neck.py  shoulders.py  sleeves.py  waist.py
procedural_human/geo_node_groups/terrain/: __init__.py  basalt_columns.py
procedural_human/geo_node_groups/utilities/: bi_rail_loft.py  gem_in_holder.py  gold_decorations.py  gold_on_band.py  gold_wavies.py  is_edge_boundary.py  join_splines.py  mirror.py  pipes.py  rivet.py  rotate_on_center.py  space_switch.py  surface_tiling.py  swap_attr.py  tool_quilt.py
procedural_human/gizmo/: __init__.py  loft_handle_gizmo.py  mesh_curves_gizmo.py  mesh_curves_operators.py
procedural_human/hand/: __init__.py
procedural_human/hand/finger/: __init__.py  animation.py  finger.py  finger_animation.py  finger_nodes.py  finger_operator.py  finger_panel.py  finger_proportions.py  finger_types.py  finger_utils.py  nodes.py  operator.py  proportions.py  utils.py
procedural_human/hand/finger_segment/: __init__.py  finger_nail_proportions.py  finger_nodes.py  finger_types.py  finger_utils.py
procedural_human/image_search/: local_folder_manager.py  search_asset_manager.py  search_operators.py  search_panel.py  yandex_search.py
procedural_human/image_seg/: merges.txt
procedural_human/masonry/: masonry_deep_research.md
procedural_human/novel_view_gen/: README.md  __init__.py  api_client.py  novel_view_operators.py  server_manager.py  setup_hunyuan3d.ps1
procedural_human/papers/: Calisto-BRDF.md  business-planning.md  charrot_gregory.md  cobble_stone_roads.md  curvature_skeletonization.md  dishonored-painterly-2.md  dishonored-painterly.md  iceberg.md  ixdar_geometry_nodes_plan.md  patch_decomposition.md  procedural_armor_plan.md  skeletonization.md
procedural_human/procedural_human/tmp/: temp_0.py
procedural_human/segmentation/: __init__.py  local_folder_manager.py  mask_to_curve.py  sam_integration.py  search_asset_manager.py  segmentation_state.py  workspace.py  yandex_search.py
procedural_human/segmentation/operators/: __init__.py  curve_operators.py  debug_planes.py  depth_profile_mesh.py  hessian_ridge_mesh.py  mesh_curve_operators.py  novel_view_operators.py  search_operators.py  segmentation_operators.py  segmentation_utils.py
procedural_human/segmentation/overlays/: curve_ridges_overlay.py  depth_map_overlay.py  hessian_overlay.py  image_overlay.py  medialness_overlay.py  spine_overlay.py
procedural_human/segmentation/panels/: __init__.py  curve_panel.py  search_panel.py  segmentation_panel.py
procedural_human/shader_node_groups/: calisto_brdf.py  dishonored_painterly.py  shader_helpers.py
procedural_human/shader_node_groups/brdf/: calisto_brdf.py
procedural_human/shader_node_groups/materials/: fabric.py  gambeson.py  gold.py  rope.py  ruby.py  sapphire.py  steel.py
procedural_human/testing/: MCP_TOOLS_GUIDE.md  README.md  __init__.py  blender_server.py  mcp_config.json  mcp_server.py  test_basalt.py  test_operators.py  topology_checker.py
procedural_human/testing/handlers/: capture.py  common.py  geometry.py  lifecycle.py  nodes.py  testing.py
procedural_human/tmp/: export_curve_to_csv.py  spreadsheet_Cube_MESH_POINT_0.csv  spreadsheet_edges_0.csv  spreadsheet_verts_0.csv  temp_0.py  temp_1.py  temp_10.py  temp_11.py  temp_12.py  temp_13.py  temp_14.py  temp_15.py  temp_16.py  temp_17.py  temp_18.py  temp_19.py  temp_2.py  temp_20.py  temp_21.py  temp_22.py  temp_23.py  temp_3.py  temp_4.py  temp_5.py  temp_6.py  temp_7.py  temp_8.py  temp_9.py
procedural_human/utils/: __init__.py  curve_serialization.py  export_curve_to_csv.py  node_export_ui.py  node_exporter.py  node_layout.py  preset_locator.py  tree_sitter_utils.py
procedural_human/utils/node_exporter/: __init__.py  exporter.py  frame_split.py  utils.py
(+134 files in other folders)
