[project]
name = "procedural-human-blender"
version = "1.0.0"
description = "Procedural Human Generator for Blender - Create realistic human models using Geometry Nodes"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Procedural Human Team", email = "info@proceduralhuman.dev"},
]
keywords = ["blender", "3d", "procedural", "human", "geometry-nodes", "modeling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []
# Note: mathutils and bpy are provided by Blender runtime

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/procedural-human/blender-addon"
Documentation = "https://procedural-human.readthedocs.io/"
Repository = "https://github.com/procedural-human/blender-addon.git"
"Bug Tracker" = "https://github.com/procedural-human/blender-addon/issues"

# Build system (optional - use package.py for Blender addon distribution)
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
