[project]
name = "procedural-human"
version = "1.0.0"
description = "Procedural Human Generator for Blender - Create realistic human models using Geometry Nodes"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Procedural Human Team", email = "info@proceduralhuman.dev" },
]
keywords = [
    "blender",
    "3d",
    "procedural",
    "human",
    "geometry-nodes",
    "modeling",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "fake-bpy-module>=20251003",
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "filemover @ git+https://github.com/plex1/filemover"
]

[project.urls]
Homepage = "https://github.com/procedural-human/blender-addon"
Documentation = "https://procedural-human.readthedocs.io/"
Repository = "https://github.com/procedural-human/blender-addon.git"
"Bug Tracker" = "https://github.com/procedural-human/blender-addon/issues"

# Build system (optional - use package.py for Blender addon distribution)
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.hatch.metadata]
allow-direct-references= true
