[project]
name = "blender-procedural-human-tools"
version = "0.1.0"
description = "CLI tooling for Blender procedural human validation loop"
requires-python = ">=3.10"
dependencies = ["rope"]

[project.scripts]
blender-cli = "tools.blender_cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tools*"]

